[FIXED] delete some components or functions

--- a/lib/shared/addon/components/language-dropdown/template.hbs
+++ b/lib/shared/addon/components/language-dropdown/template.hbs
@@ -9,7 +9,7 @@
     <i class="icon icon-globe"></i> {{selectedLabel}} <i class="icon icon-chevron-down"></i>
   {{/dd.trigger}}
 
-  {{#dd.content class="text-right lang-select"}}
+  {{!-- {{#dd.content class="text-right lang-select"}}
     {{#if settings.isRancher}}
       <li><a href="http://translate.rancher.com" target="_blank" rel="noopener nofollow">{{t 'languageContribute'}}</a></li>
       <li class="divider"></li>
@@ -22,6 +22,6 @@
       </li>
     {{/each-in}}
 
-  {{/dd.content}}
+  {{/dd.content}} --}}
 
 {{/basic-dropdown}}
