--- a/app/styles/components/_page-header.scss
+++ b/app/styles/components/_page-header.scss
@@ -215,7 +215,7 @@ $nav-spacing: 4px;
 
   .logo-oss {
     width: 80px;
-    background-image: url('images/logos/main.svg');
+    // background-image: url('images/logos/main.svg');
     background-position: left center;
     background-repeat: no-repeat;
     background-size: auto 32px;
