--- a/app/workload/template.hbs
+++ b/app/workload/template.hbs
@@ -3,11 +3,11 @@
     <h1 class="vertical-middle">
       {{t 'servicePage.header' name=service.displayName}}
     </h1>
-    {{#if (and false service.canHaveContainers (not service.isSelector))}}
+    {{!-- {{#if (and false service.canHaveContainers (not service.isSelector))}}
       <div class="vertical-middle" style="height: 30px;">
         {{info-multi-stats model=service largeTargetId="largeStats"}}
       </div>
-    {{/if}}
+    {{/if}} --}}
   </div>
   <div class="right-buttons">
     {{badge-state model=service}}
