--- a/lib/global-admin/addon/security/roles/index/template.hbs
+++ b/lib/global-admin/addon/security/roles/index/template.hbs
@@ -1,13 +1,13 @@
 <section class="header has-tabs clearfix p-0">
   <ul class="tab-nav">
     <li>
-      <a href="#" {{action "changeView" "global"}} class="{{if (eq context "global") "active" ""}}">Global</a>
+      <a href="#" {{action "changeView" "global"}} class="{{if (eq context "global") "active" ""}}">全局</a>
     </li>
     <li>
-      <a href="#" {{action "changeView" "cluster"}} class="{{if (eq context "cluster") "active" ""}}">Cluster</a>
+      <a href="#" {{action "changeView" "cluster"}} class="{{if (eq context "cluster") "active" ""}}">集群</a>
     </li>
     <li>
-      <a href="#" {{action "changeView" "project"}} class="{{if (eq context "project") "active" ""}}">Project</a>
+      <a href="#" {{action "changeView" "project"}} class="{{if (eq context "project") "active" ""}}">进程</a>
     </li>
   </ul>
   {{#unless (eq context "global")}}
