--- a/lib/login/addon/components/reload-btn/template.hbs
+++ b/lib/login/addon/components/reload-btn/template.hbs
@@ -1,3 +1,3 @@
-<button class="btn bg-primary reload-btn" {{action "reload"}}>
-  <i class="icon icon-refresh text-small"/> Reload
+<button class="btn bg-primary reload-btn" {{action "重新登录"}}>
+  <i class="icon icon-refresh text-small"/> 重新登录
 </button>
