--- a/app/authenticated/project/ns/index/template.hbs
+++ b/app/authenticated/project/ns/index/template.hbs
@@ -2,7 +2,7 @@
   <h1 class="pull-left">{{t 'projectsListNamespacePage.header'}}</h1>
   <div class="vertical-middle"></div>
   <div class="right-buttons">
-    <a href="#" {{action "newNs"}} class="btn bg-primary btn-sm ml-10" disabled={{rbac-prevents resource="namespace" scope="cluster" permission="create"}}>{{t 'namespacesPage.addNamespace'}}</a>
+    {{!-- <a href="#" {{action "newNs"}} class="btn bg-primary btn-sm ml-10" disabled={{rbac-prevents resource="namespace" scope="cluster" permission="create"}}>{{t 'namespacesPage.addNamespace'}}</a> --}}
   </div>
 </section>
 
