--- a/lib/shared/addon/components/action-menu/template.hbs
+++ b/lib/shared/addon/components/action-menu/template.hbs
@@ -41,7 +41,7 @@
 
     {{else}}
 
-      <li><a href="#" onclick="return false;" disabled="true">No actions available</a></li>
+      <li><a href="#" onclick="return false;" disabled="true">无可执行动作</a></li>
 
     {{/each}}
 
