--- a/app/components/project-group/template.hbs
+++ b/app/components/project-group/template.hbs
@@ -10,9 +10,9 @@
     {{/if}}
   </td>
   <td class="text-right">
-    {{#link-to "authenticated.cluster.projects.new-ns" (query-params addTo=(or model.id null)) class="btn bg-primary btn-sm mr-10" disabled=(rbac-prevents resource="namespace" scope="cluster" permission="create")}}
+    {{!-- {{#link-to "authenticated.cluster.projects.new-ns" (query-params addTo=(or model.id null)) class="btn bg-primary btn-sm mr-10" disabled=(rbac-prevents resource="namespace" scope="cluster" permission="create")}}
       {{t 'namespacesPage.addNamespace'}}
-    {{/link-to}}
+    {{/link-to}} --}}
   </td>
   <td data-title="{{dt.actions}}" class="actions">
     {{#if model}}
