--- a/lib/shared/addon/components/cluster-driver/driver-rke/template.hbs
+++ b/lib/shared/addon/components/cluster-driver/driver-rke/template.hbs
@@ -9,11 +9,11 @@
     }}
       <div class="row">
         <div class="btn-group  pull-right">
-          {{#if pasteOrUpload}}
+          {{!-- {{#if pasteOrUpload}}
             <button class="btn btn-sm" {{action 'cancel'}}>{{t 'clusterNew.advanced.cancel'}}</button>
           {{else}}
             <button class="btn btn-sm bg-primary" {{action 'showPaste'}}>{{t 'clusterNew.advanced.yaml'}} <span class="icon icon-copy"></span></button>
-          {{/if}}
+          {{/if}} --}}
           <button class="btn btn-sm bg-primary" {{action "click"}}>{{t 'uploadFile.label'}} <span class="icon icon-upload"></span></button>
         </div>
       </div>
@@ -138,7 +138,7 @@
           </div>
 
           <div class="col span-4">
-            <label class="acc-label">{{t 'loggingPage.dockerRootDir.label'}}</label>
+            <label class="acc-label">{{t 'clusterNew.rke.dockerRootDir.label'}}</label>
             {{input
                 type="text"
                 value=model.cluster.dockerRootDir
