--- a/lib/shared/addon/components/cru-cloud-provider/template.hbs
+++ b/lib/shared/addon/components/cru-cloud-provider/template.hbs
@@ -6,20 +6,20 @@
         {{radio-button selection=selectedCloudProvider value='none'}} {{t 'generic.none'}}
       </label>
     </div>
-    {{#if (or (eq driver 'amazonec2') (eq driver 'custom'))}}
+    {{!-- {{#if (or (eq driver 'amazonec2') (eq driver 'custom'))}}
       <div class="radio">
         <label>
           {{radio-button selection=selectedCloudProvider value='amazonec2'}} {{t 'cloudProvider.amazon'}}
         </label>
       </div>
-    {{/if}}
-    {{#if (or (eq driver 'azure') (eq driver 'custom'))}}
+    {{/if}} --}}
+    {{!-- {{#if (or (eq driver 'azure') (eq driver 'custom'))}}
       <div class="radio">
         <label>
           {{radio-button selection=selectedCloudProvider value='azure'}} {{t 'cloudProvider.azure'}}
         </label>
       </div>
-    {{/if}}
+    {{/if}} --}}
     {{#if (and (not-eq driver 'amazonec2') (not-eq driver 'azure'))}}
       <div class="radio">
         <label>
