--- a/lib/shared/addon/components/empty-table/template.hbs
+++ b/lib/shared/addon/components/empty-table/template.hbs
@@ -1,5 +1,5 @@
 <div class="col span-6 offset-3 text-center pt-40 pb-40">
-  <img style="width: 75%;" src="{{app.baseAssets}}assets/images/resources/{{resource}}.svg"/>
+  <img style="width: 75%;" src="{{app.baseAssets}}assets/images/resources/{{resource}}.png"/>
   {{#if showNew}}
     <br/>
     {{#if (eq ctx 'projectId')}}
