--- a/lib/shared/addon/components/cluster-driver/driver-rke/template.hbs
+++ b/lib/shared/addon/components/cluster-driver/driver-rke/template.hbs
@@ -36,14 +36,14 @@
         {{copy-to-clipboard tooltipText="" buttonText="copyToClipboard.tooltip" clipboardText=value class="with-clip"}}
       {{else}}
         <div class="row">
-          <div class="col span-4">
+          {{!-- <div class="col span-4">
             <label class="acc-label">{{t 'clusterNew.rke.version.label'}}</label>
             {{new-select
                 content=versionChoices
                 optionLabelPath='value'
                 value=cluster.rancherKubernetesEngineConfig.kubernetesVersion
             }}
-          </div>
+          </div> --}}
           <div class="col span-4">
             <label class="acc-label">{{t 'clusterNew.rke.network.label'}}</label>
             {{new-select
@@ -68,6 +68,12 @@
                 {{t 'generic.disabled'}}
               </label>
             </div>
+          </div>
+          <div class="col span-4">
+            {{cru-cloud-provider
+                cluster=model.cluster
+                driver=nodeWhich
+            }}
           </div>
         </div>
         <div class="row">
@@ -165,14 +171,14 @@
             {{/if}}
           </div>
         </div>
-        <div class="row">
+        {{!-- <div class="row">
           <div class="col span-12">
             {{cru-cloud-provider
                 cluster=model.cluster
                 driver=nodeWhich
             }}
           </div>
-        </div>
+        </div> --}}
       {{/if}}
     {{/accordion-list-item}}
   {{/accordion-list}}
