[FIXED] something leave over

--- a/app/components/annotations-section/template.hbs
+++ b/app/components/annotations-section/template.hbs
@@ -1,4 +1,4 @@
-{{#accordion-list-item
+{{!-- {{#accordion-list-item
      title=(t 'annotationsSection.title')
      detail=(t 'annotationsSection.detail')
      statusClass=(if labelArray.length 'bg-success' 'text-muted')
@@ -35,4 +35,4 @@
       </tr>
     {{/if}}
   {{/component}}
-{{/accordion-list-item}}
+{{/accordion-list-item}} --}}
