--- a/app/components/labels-section/template.hbs
+++ b/app/components/labels-section/template.hbs
@@ -1,4 +1,4 @@
-{{#accordion-list-item
+{{!-- {{#accordion-list-item
      title=(t 'labelsSection.title')
      detail=(t 'labelsSection.detail')
      status=(t 'labelsSection.status' count=labelArray.length)
@@ -33,4 +33,4 @@
       </tr>
     {{/if}}
   {{/component}}
-{{/accordion-list-item}}
+{{/accordion-list-item}} --}}
