--- a/app/workload/template.hbs
+++ b/app/workload/template.hbs
@@ -18,13 +18,12 @@
 <div id="largeStats">
 </div>
 
-{{#if service.description}}
+{{!-- {{#if service.description}}
   {{banner-message color='bg-secondary mb-0 mt-10' message=(linkify service.description)}}
-{{/if}}
-
-{{#if service.showTransitioningMessage}}
+{{/if}} --}}
+{{!-- {{#if service.showTransitioningMessage}}
   <div class="{{service.stateColor}}"><p>{{uc-first service.transitioningMessage}}</p></div>
-{{/if}}
+{{/if}} --}}
 
 <section>
   <div class="row banner bg-info basics">
