--- a/app/components/resource-condition-list/template.hbs
+++ b/app/components/resource-condition-list/template.hbs
@@ -1,4 +1,4 @@
-{{#accordion-list-item
+{{!-- {{#accordion-list-item
      title=(t 'conditionSections.title')
      detail=(t 'conditionSections.detail' resourceType=resourceType)
      expandAll=expandAll
@@ -47,4 +47,4 @@
       </tr>
     {{/if}}
   {{/component}}
-{{/accordion-list-item}}
+{{/accordion-list-item}} --}}
