--- a/app/components/taints-section/template.hbs
+++ b/app/components/taints-section/template.hbs
@@ -1,4 +1,4 @@
-{{#accordion-list-item
+{{!-- {{#accordion-list-item
      title=(t 'taintsSection.title')
      detail=(t 'taintsSection.detail' resourceType=resourceType)
      expandAll=expandAll
@@ -35,4 +35,4 @@
       </tr>
     {{/if}}
   {{/component}}
-{{/accordion-list-item}}
+{{/accordion-list-item}} --}}
